resource: update and add favicons, update name in package.json
favicon.io - favicon generator used

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pia-flux",
   "version": "0.0.1",
   "description": "A Quasar Project",
-  "productName": "Quasar App",
+  "productName": "Pia Flux",
   "author": "Stanley Ndagi <ndagis@gmail.com>",
   "type": "module",
   "private": true,
